--- a/assets/css/lightcase.css
+++ b/assets/css/lightcase.css
@@ -18,10 +18,10 @@
  *   'breakpoint': 768px
  * );
  */
-@font-face {
+ @font-face {
   font-family: 'lightcase';
-  src: url("../fonts/lightcaseeead.eot?55356177");
-  src: url("../fonts/lightcaseeead.eot?55356177#iefix") format("embedded-opentype"), url("../fonts/lightcaseeead.woff?55356177") format("woff"), url("../fonts/lightcaseeead.ttf?55356177") format("truetype"), url("../fonts/lightcaseeead.svg?55356177#lightcase") format("svg");
+  src: url("../fonts/lightcase.eot?55356177");
+  src: url("../fonts/lightcase.eot?55356177#iefix") format("embedded-opentype"), url("../fonts/lightcase.woff?55356177") format("woff"), url("../fonts/lightcase.ttf?55356177") format("truetype"), url("../fonts/lightcase.svg?55356177#lightcase") format("svg");
   font-weight: normal;
   font-style: normal;
 }
