--- a/assets/css/lightcase.css
+++ b/assets/css/lightcase.css
@@ -29,7 +29,7 @@
 [class*='lightcase-icon-']:before {
   font-family: 'lightcase', sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: normal;|
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
